2007-01-11  Akim Demaille  <demaille@gostai.com>

	urbi -> libport
	* fwd.hh, lockable.hh, semaphore.hh, semaphore.hxx,
	* singleton-ptr.hh, thread.hh: Move these in the libport namespace.

2006-12-27  Akim Demaille  <akim.demaille@free.fr>

	ref-pt: const copy
	* libport/ref-pt.hh (copy): Add a const one.
	(cpt): Private mutable.
	(p): Private.

2006-12-27  Matthieu Nottale  <nottale@gostai.com>

	Fix semaphore bug under linux/windows
	* semaphore.hxx: new the sem_t* in ctor.

2006-12-27  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Fix installation directory.
	* libport.mk: install sys/stat.h under libport/sys/stat.h. We cannot
	  use nobase_ here so libportsysdir is defined to be libportdir/sys.

2006-12-23  Akim Demaille  <demaille@gostai.com>

	Remove debugging output
	* utime.hh: here.

2006-12-21  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	List sys/stat.h in libport.mk
	* libport.mk (libport_HEADERS): Here.

2006-12-21  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Wrap sys/stat.h.
	* sys/stat.h: New.
	* sys: New.

2006-12-20  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	List cstdio in libport.mk.
	* libport.mk: Here.

2006-12-20  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Wrap cstdio.
	* cstdio: New. Address portability issues on VC++.

2006-12-19  Akim Demaille  <demaille@gostai.com>

	Fix fwd.hh
	* fwd.hh: Adjust namespaces.

2006-12-19  Akim Demaille  <demaille@gostai.com>

	RefPt
	* ref-pt.hh: New.
	From k1/utypes.hh.

2006-12-19  Akim Demaille  <demaille@gostai.com>

	Fix compilation for Aibo
	* hash.hh: Cannot use quotes in #error.
	Move to the libport:: namespace.

2006-12-14  Akim Demaille  <akim.demaille@free.fr>

	windows.h -> windows.hh
	* windows.h: Rename as...
	* windows.hh: this.
	* README, libport.mk, lockable.hh, semaphore.hh, thread.hh: .
	* utime.hh: Adjust.

2006-12-08  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Don't include system headers within the URBI namespace.
	* semaphore.hxx: Ahem...
